--- a/frontend/src/Pages/Home/home.css
+++ b/frontend/src/Pages/Home/home.css
@@ -1,11 +1,62 @@
-img{
-    width: 100%;
-    overflow: hidden;
-    height: 60vh;
-    position: relative;
+*{
+    box-sizing: border-box;
 }
+
 .overlaydiv{
     color: #1B745E;
-    position: absolute;
-    top: 0;
+}
+
+.header{
+    background-image: url(/src/Assets/Images/sl4.jpg);
+    padding: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.overlaydiv p,
+.overlaydiv h1
+{
+    text-align: center;
+}
+
+.hero{
+    height: 100vh;
+    background-image: url(/src/Assets/Images/gallery1.jpg);
+    display: flex;justify-content: center;align-items: center;
+}
+
+.herobannerleft{
+    width: 400px;
+    height: 400px;
+}
+.herobannerleft img{
+    width: 100%;
+    height: 100%;
+}
+.herobannerright{
+    width: 400px;
+    height: 400px;
+    background-color: #1B745E;
+    color: white;
+    display: flex;justify-content: center;align-items: left;flex-direction: column;text-align: left;
+    padding: 70px;
+    gap: 20px;
+
+}
+.herobannerright button{
+    padding: 10px;
+    color: #1B745E;
+}
+
+.herobannerright h1{
+    font-weight: 100;
+    font-size: 40px;
+}
+.herobannerright p{
+    font-weight: 100;
+    font-size: 12px;
+}
+
+.herobanner{
+    display: flex;justify-content: center;align-items: center;
 }
